# nz-companies-office

./: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.rst  Dockerfile  README.md  docker-compose.yml  just_a_reminder.txt  justfile  pyproject.toml  ruff.toml
app/: index.html  package-lock.json  package.json  server.py
app/src/: main.js  style.css
integration/: test_company_ingestion.py
notebooks/: 00_load_database.py  01_mapping_the_network.py  02_co_investment_patterns.py  03_communities_and_influence.py  04_entity_resolution.py  05_entity_resolution_v2.py  05_predicting_investor_types.py  _neo4j_helpers.py
notebooks/__marimo__/session/: 00_load_database.py.json  01_mapping_the_network.py.json  02_co_investment_patterns.py.json  03_communities_and_influence.py.json  04_entity_resolution.py.json  05_entity_resolution_v2.py.json  05_predicting_investor_types.py.json
notebooks/application/: 00_dataset.py  01_link_prediction.py  02_interactive_testing.py
notebooks/workshop/: 01_graph_foundations.py  02_graph_representation.py  03_graph_traversal.py  04_centrality.py  05_communities.py  06_advanced_topics.py
notebooks/workshop-gnn/: 01_gnn_foundations.py  02_gcn.py  03_gat.py  04_graphsage.py  05_graph_classification.py  06_advanced_gnn.py
notebooks/workshop/layouts/: 01_graph_foundations.slides.json
scripts/: explore_graph.cypher  export_graph_json.py  export_parquet.py  neo4j_load_csv.cypher  neo4j_load_database.py  workshop.cypher
scripts/csv/: 00_setup.cypher  01_companies.cypher  02_directors.cypher  03_shareholders.cypher  04a_address_reg_office.cypher  04b_address_service.cypher  05_industries.cypher  05a_industry_hierarchy.cypher  06_trading_names.cypher  07_insolvencies.cypher  08_properties.cypher  09_trading_areas.cypher  10_address_public.cypher  11_corporate_links.cypher
sql/: .sqlfluff
src/nz_companies_office/: config.py  exceptions.py
src/nz_companies_office/cli/: main.py
src/nz_companies_office/clients/: nzbn.py
src/nz_companies_office/db/: connection.py  repository.py
src/nz_companies_office/domain/: models.py
tests/: test_cli.py  test_connection.py  test_csv_loader.py  test_entity_resolution.py  test_geocode.py  test_models.py  test_my_module.py  test_nzbn_client.py  test_repository.py
(+33 files in other folders)
