[project]
name = "nz-companies-office"
version = "0.1.0"
description = "My Data Science Project"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "firstname.lastname", email = "firstname.lastname@example.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "dvc>=3.30.0",
    "neo4j>=6.2.0",
    "httpx>=0.28.1",
    "marimo>=0.23.9",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "networkx>=3.4.2",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
    "scipy>=1.15.3",
    "node2vec>=0.5.0",
    "torch>=2.12.0",
    "torch-geometric>=2.8.0",
    "sentence-transformers>=3.0.0",
    "altair>=6.2.1",
    "datasketch>=2.0.0",
    "colorlog>=6.11.0",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
]

viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

notebook = [
    "jupyter>=1.0.0",
    "nbconvert>=7.14.0",
    "nbformat>=5.9.0",
]

[tool.marimo.runtime]
watcher_on_save = "autorun"
output_max_bytes = 10_000_000



[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[project.scripts]
nz-companies-office = "nz_companies_office.cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.139.0",
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
    "pyshp>=3.1.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.15",
    "uvicorn>=0.49.0",
]
